Z-index Main Wrapper (Map) increased to 500, to avoid being hidden behind header, in Lefalet Full View control activated

--- a/web/modules/custom/italo_module/sass/common.scss
+++ b/web/modules/custom/italo_module/sass/common.scss
@@ -5,6 +5,10 @@
   font-weight: bold;
 }
 
+.main-wrapper {
+  z-index: 500;
+}
+
 .paragraphs-subform .field-group-details.geometry-attributes .details-wrapper {
   display: flex;
   justify-content: space-around;
